<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/profile_category_setting"
        android:key="profileCategoryKey">
        <PreferenceScreen
            android:title="@string/change_img_setting_title"
            android:key="@string/profile_img_pref" />
        <EditTextPreference
            android:key="@string/profile_name_pref"
            android:title="@string/profile_name_setting_title"
            android:summary="current name" />
        <com.ncatz.babyguard.preferences.DialogChangePasswordPreference
            android:key="@string/profile_password_pref"
            android:title="@string/change_pass_setting_title" />
        <EditTextPreference
            android:key="@string/profile_phone_pref"
            android:title="@string/phone_number_setting_title"
            android:summary="current phone number" />
        <PreferenceScreen
            android:title="Kids"
            android:key="@string/profile_kids_pref"
            android:fragment="com.ncatz.babyguard.preferences.KidsSettings_Fragment" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications_category_settings">
        <ListPreference
            android:key="@string/notifications_vibration_pref"
            android:title="@string/vibration_setting_title"
            android:defaultValue="1"
            android:entries="@array/notifications_vibration_pref_entries"
            android:entryValues="@array/notifications_vibration_pref_values"
            android:summary="current option" />
        <SwitchPreference
            android:key="@string/notifications_preview_pref"
            android:title="@string/msg_preview_setting_title"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support_category_settings">
        <PreferenceScreen android:title="@string/faq_settings_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/faq_url" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/ask_us_setting_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/contact_developer_uri"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>